# camerobot

./: AGENTS.md  README.md  app.js  index.html  pyproject.toml  styles.css  workbench.js
camerobot/: __init__.py  assets.py  cli.py  face_display.py  models.py  pipeline.py  planner.py  reference_analysis.py  server.py
tests/: test_mvp0.py
