[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "camerobot"
version = "0.1.0"
description = "MVP0 software scaffold for a personal robot photographer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
camerobot = "camerobot.cli:main"

[tool.setuptools.packages.find]
include = ["camerobot*"]
